# syft-playground

./: README.md  config.json  federated_kmeans.py  federated_logreg.py  load_data_local.py  load_data_remote.py  pearson.py  pyproject.toml  tasks.py
algorithms/: fed_utils.py  federated_kmeans.py  federated_logreg.py  federated_pearson.py
